--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mysql2": "^3.6.0"
+    "mysql2": "^3.6.0",
+    "pg": "^8.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
