--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "school-management-api",
+  "name": "educase-school-api",
   "version": "1.0.0",
   "description": "School Management API with location-based sorting",
   "main": "src/app.js",
@@ -16,8 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mysql2": "^3.6.0",
-    "pg": "^8.16.0"
+    "mysql2": "^3.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
